# misc-utils

./: .gitignore  Makefile.am  README.md  configure.ac
cross_arm/: cross_arm.sh
cross_pico/: cross_pico.sh
etc_portage_convert/: etc_portage_convert.sh
filter_firmware/: filter_firmware.sh
genhash/: Makefile  genhash.c
only_required_firmware/: only_required_firmware  only_required_firmware.sh
root_lock/: root_lock.sh
snapshots/: 99-ss_crypt.rules  Makefile.am  gen_cron.sh  gen_cron.sh.in  snapshots  snapshots.conf  snapshots.cron  snapshots.sh  snapshots.sh.in  transfer.conf  transfer.sh
userscripts/: fuck_you_t_co.user.js  mobile_to_desktop.user.js  outlook_logout_redirect.user.js
zram/conf.d/: zram
zram/init.d/: zram
